Fix: Set Object runtime matrices to identity when loading 4.2 files

As described in the code comment, the matrices are currently zeroed
before a depsgraph update when loading from files saved with 4.2 where
they were moved to runtime data. It's better to at least set them to
identity matrices so object transforms remain valid.

Related to #119348